@@ -19,13 +19,22 @@ function Get-IisAppPool
     Gets a `Microsoft.Web.Administration.ApplicationPool` object for an application pool.
     
     .DESCRIPTION
-    Use the `Microsoft.Web.Administration` API to get a .NET object for an application pool.
+    The `Get-IisAppPool` function returns an IIS application pools as a `Microsoft.Web.Administration.ApplicationPool` object. Use the `Name` parameter to return the application pool. If that application pool isn't found, `$null` is returned.
+
+    Carbon adds a `CommitChanges` method on each object returned that you can use to save configuration changes.
+
+    Beginning in Carbon 2.0, `Get-IisAppPool` will return all application pools installed on the current computer.
     
     .LINK
     http://msdn.microsoft.com/en-us/library/microsoft.web.administration.applicationpool(v=vs.90).aspx
     
     .OUTPUTS
     Microsoft.Web.Administration.ApplicationPool.
+
+    .EXAMPLE
+    Get-IisAppPool
+
+    Demonstrates how to get *all* application pools.
     
     .EXAMPLE
     Get-IisAppPool -Name 'Batcave'
@@ -40,14 +49,19 @@ function Get-IisAppPool
     [CmdletBinding()]
     [OutputType([Microsoft.Web.Administration.ApplicationPool])]
     param(
-        [Parameter(Mandatory=$true)]
         [string]
-        # The name of the application pool to return.
+        # The name of the application pool to return. If not supplied, all application pools are returned.
         $Name
     )
     
     $mgr = New-Object Microsoft.Web.Administration.ServerManager
     $mgr.ApplicationPools |
-        Where-Object { $_.Name -eq $Name } |
+        Where-Object { 
+            if( -not $PSBoundParameters.ContainsKey('Name') )
+            {
+                return $true
+            }
+            return $_.Name -eq $Name 
+        } |
         Add-IisServerManagerMember -ServerManager $mgr -PassThru
 }
