@@ -28,7 +28,26 @@ function Stop-Test
 {
     if( (Test-IisAppPool -Name $appPoolName) )
     {
-        Uninstall-AppPool -Name $appPool
+        Uninstall-IisAppPool -Name $appPoolName
+    }
+}
+
+function Test-ShouldGetAllApplicationPools
+{
+    Install-IisAppPool -Name 'ShouldGetAllApplicationPools'
+    Install-IisAppPool -Name 'ShouldGetAllApplicationPools2'
+    try
+    {
+        $appPools = Get-IisAppPool
+        Assert-NotNull $appPools
+        Assert-Is $appPools ([object[]])
+        Assert-NotNull ($appPools | Where-Object { $_.Name -eq 'ShouldGetAllApplicationPools' })
+        Assert-NotNull ($appPools | Where-Object { $_.Name -eq 'ShouldGetAllApplicationPools2' })
+    }
+    finally
+    {
+        Uninstall-IisAppPool -Name 'ShouldGetAllApplicationPools'
+        Uninstall-IisAppPool -Name 'ShouldGetAllApplicationPools2'
     }
 }
 
